added static folder with css and image subfolder

--- a/apps/ninja_app/templates/index.html
+++ b/apps/ninja_app/templates/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ninja Money</title>
-    <style>
+    {%load static%}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+
+    <!-- <style>
         .container{
             margin: 20px auto;
             width: 1000px;
@@ -30,7 +34,7 @@
         .lostgold{
             color: red;
         }
-    </style>
+    </style> -->
 </head>
 <body>
     <div class="container">
