--- a/apps/ninja_app/templates/index.html
+++ b/apps/ninja_app/templates/index.html
@@ -7,58 +7,63 @@
     <title>Ninja Money</title>
     {%load static%}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
-
-    <style>
-        
-    </style>
 </head>
 <body>
 <div id="main-container">
-        <div class="img1"></div>
 
         <div class="container">
             <h1 class="gold">Your Gold: {{request.session.gold}} </h1>
             <form class="newgame_form" action="/newgame">
                 <input class="newgame" type="submit" name="restart" value="New Game">
             </form>
-    
-            <div class="col">
+            <div id="farm_wrapper">
                 <label><b>Farm</b></label>
                 <p>(earns 10-20 gold)</p>
+                <div id="farm" class="col"></div>
                 <form action="/process", method="POST">
                     {% csrf_token %}
                     <input type="hidden" class="newgold">
                     <input class="button" type="submit", name="farm", value="Find Gold!">
                 </form>
             </div>
-            <div class="col">
+               
+            <div id="cave_wrapper">
                 <label><b>Cave</b></label>
                 <p>(earns 5-10 gold)</p>
+                <div id="cave" class="col"></div>
                 <form action="/process", method="POST">
                     {% csrf_token %}
                     <input type="hidden", name="newgold">
-                    <input class="button" type="submit", name="cave", value="Find Gold!">
+                    <input class="cave_button" type="submit", name="cave", value="Find Gold!">
                 </form>
             </div>
-            <div class="col">
+
+            <div id="house_wrapper">
                 <label><b>House</b></label>
-                <p style="margin-left: 23%;">(earns 2-5 gold)</p>
+                <p>(earns 2-5 gold)</p>
+                <div id="house" class="col"></div>
                 <form action="/process", method="POST">
                     {% csrf_token %}
                     <input type="hidden", name="newgold">
-                    <input class="button" type="submit", name="house", value="Find Gold!">
+                    <input class="house_button" type="submit", name="house", value="Find Gold!">
                 </form>
-            </div>
-            <div class="col">
+            </div>            
+
+            <div id="casino_wrapper">
                 <label><b>Casino</b></label>
-                <p style="margin-left: 15%;">(earns/takes 0-50 gold)</p>
+                <p>(earns/takes 0-50 gold)</p>
+                
+                <div id="casino" class="col"></div>
+                
                 <form action="/process", method="POST">
                     {% csrf_token %}
                     <input type="hidden", name="newgold">
-                    <input class="button" type="submit", name="casino", value="Find Gold!">
+                    <input class="casino_button" type="submit", name="casino", value="Find Gold!">
                 </form>
             </div>
+
+            
+            
             <p class="active"><strong>Activities:</strong></p>
             <div class="text"
             {{request.session.text|safe}}
